syntax = "proto3";

package ark_nova_stats.game_server.proto;

import "ark_nova_stats/proto/game_state.proto";

option go_package = "github.com/shaldengeki/monorepo/ark_nova_stats/game_server/proto/server";

message GetStateRequest {
    int64 game_id = 1;
}

message GetStateResponse {
    ark_nova_stats.proto.GameState game_state = 1;
}

message ValidateStateRequest {
    ark_nova_stats.proto.GameState game_state = 1;
}

message ValidateStateResponse {
    repeated string validation_errors = 1;
}

service GameService {
    rpc GetState(GetStateRequest) returns (GetStateResponse);
    rpc ValidateState(ValidateStateRequest) returns (ValidateStateResponse);
}
